# gbf-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  renovate.json
docs/: gbf.xcf
gbf_core/: Cargo.toml  output.txt
gbf_core/src/: basic_block.rs  bytecode_loader.rs  cfg_dot.rs  function.rs  graal_io.rs  instruction.rs  lib.rs  module.rs  opcode.rs  operand.rs  utils.rs
gbf_core/src/decompiler/: execution_frame.rs  function_decompiler.rs  function_decompiler_context.rs  mod.rs  region.rs
gbf_core/src/decompiler/ast/: array.rs  array_access.rs  assignable.rs  assignment.rs  ast_vec.rs  bin_op.rs  block.rs  control_flow.rs  expr.rs  func_call.rs  function.rs  identifier.rs  literal.rs  member_access.rs  meta.rs  mod.rs  new.rs  new_array.rs  node_id.rs  phi.rs  ptr.rs  range.rs  ret.rs  ssa.rs  statement.rs  unary_op.rs  vbranch.rs
gbf_core/src/decompiler/handlers/: bin_op.rs  builtins.rs  general.rs  identifier.rs  jump.rs  literal.rs  mod.rs  nop.rs  short_circuit.rs  special_one_operand.rs  special_three_operand.rs  special_two_operand.rs  un_op.rs  (+1 more)
gbf_core/tests/: common.rs  test_ast_construction.rs  test_bytecode_loader.rs  test_cfg_generation.rs
gbf_core/tests/expected_output/: break-shit.gs2  simple.gs2
gbf_core/tests/gs2bc/: _ScriptedRC.gs2bc  arithmetic.gs2bc  break-shit.gs2bc  builtins.gs2bc  condition.gs2bc  inline-function.gs2bc  multiple-functions.gs2bc  short-circuit-simple.gs2bc  simple.gs2bc  ternary.gs2bc
gbf_suite/: Cargo.toml  README.md  logging_config.yaml
gbf_suite/src/: aws_upload.rs  consts.rs  gbf_result.rs  main.rs  utils.rs
(+169 files in other folders)
