[package]
name = "gbf_core"
version = "0.1.12"
# TODO: Once 2024 edition is stable, switch to it. ETA Feb 2025.
edition = "2021"

[dependencies]
log = "0.4.22"
petgraph = { version = "0.7.0", features = ["serde-1"] }
serde = {version = "1.0.216", features = ["derive"]}
thiserror = "2.0.8"
gbf_macros = { path = "../gbf_macros" }
regex = "1.11.1"

[package.metadata]
msrv = "1.81.0"
