[package]
name = "gbf_suite"
version = "0.1.10"
edition = "2021"

[dependencies]
aws-config = "1.5.13"
aws-sdk-dynamodb = "1.55.0"
aws-sdk-s3 = "1.68.0"
dotenv = "0.15.0"
gbf_core = { path = "../gbf_core" }
log = "0.4.22"
log4rs = "1.3.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.135"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
